Added initial commit for conversion and fixed sparseMatrix constructor.

--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ before_install:
   - |
     sudo Rscript ./install_r_packages.r dplyr ggplot2 tidyr
     pip install flake8 pytest codecov pytest-cov
-    pip install ipython tzlocal rpy2
+    pip install ipython rpy2 scipy
 
 install:
   - python setup.py install
