--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -22,6 +22,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y r-base
         python -m pip install --upgrade pip
+        pip install rpy2 scipy
     - name: Lint with flake8
       run: |
         pip install flake8
