Fix syntax error.

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,9 +31,10 @@ jobs:
         pip install flake8
         ./run_linting.sh
     - name: Install R dependencies
-      sudo Rscript ./install_r_packages.r dplyr ggplot2 tidyr
-      pip install flake8 pytest codecov pytest-cov
-      pip install ipython rpy2 scipy
+      run: |
+        sudo Rscript ./install_r_packages.r dplyr ggplot2 tidyr
+        pip install flake8 pytest codecov pytest-cov
+        pip install ipython rpy2 scipy
     - name: Install package
       run: |
         python setup.py install
