Path to install script for R packages.

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -32,7 +32,7 @@ jobs:
         ./run_linting.sh
     - name: Install R dependencies
       run: |
-        sudo Rscript ./install_r_packages.r dplyr ggplot2 tidyr
+        sudo Rscript ../../install_r_packages.r dplyr ggplot2 tidyr
         pip install flake8 pytest codecov pytest-cov
         pip install ipython rpy2 scipy
     - name: Install package
