Use rpy2's master.

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -33,7 +33,8 @@ jobs:
     - name: Install Python dependencies
       run: |
         pip install flake8 pytest codecov pytest-cov
-        pip install ipython rpy2 scipy
+        pip install ipython scipy
+	pip install -e git://github.com/rpy2/rpy2.git@master#egg=rpy2
     - name: Install R dependencies
       run: |
         Rscript -e 'install.packages(c("dplyr", "ggplot2", "tidyr"))'
