Added classes to better match the class hierarchy on the R side.

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -34,13 +34,12 @@ jobs:
       run: |
         pip install flake8 pytest codecov pytest-cov
         pip install ipython scipy
-        pip install -e git://github.com/rpy2/rpy2.git@master#egg=rpy2
     - name: Install R dependencies
       run: |
         Rscript -e 'install.packages(c("dplyr", "ggplot2", "tidyr"))'
     - name: Install package
       run: |
-        python setup.py install
+        pip install .
     - name: Test with pytest
       run: |
         export LD_LIBRARY_PATH=$(python -m rpy2.situation LD_LIBRARY_PATH):${LD_LIBRARY_PATH}
