--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-        r-version: [4.0, 'release']
+        python-version: [3.7, 3.8, 3.9, "3.10"]
+        r-version: ['release']
         os: [ubuntu-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v1
