--- a/.github/workflows/webpages.yml
+++ b/.github/workflows/webpages.yml
@@ -6,7 +6,7 @@ on:
       - '!gh-pages'
 
 env:
-  R-VERSION: "4.0"
+  R-VERSION: "release"
 
 jobs:
   job_1:
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: 3.9
       - name: Set up R
         uses: r-lib/actions/setup-r@master
         with:
