--- a/.github/workflows/webpages.yml
+++ b/.github/workflows/webpages.yml
@@ -13,13 +13,13 @@ jobs:
     name: sphinx_html
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: 3.8
       - name: Set up R
-        uses: r-lib/actions/setup-r@master
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ env.R-VERSION }}
       - name: Cache R packages
